--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,21 +1,24 @@
 --- 
-blueprint/src/grid.png: blueprint/src/grid-a3e8e6a6df57000ec00b24e8ec862608.png
-blueprint/plugins/buttons/icons/key.png: blueprint/plugins/buttons/icons/key-5f38d0204e83d3d83585a62ff993342b.png
-blueprint/plugins/link-icons/icons/doc.png: blueprint/plugins/link-icons/icons/doc-d3f4b7ad9b39b89cc969ac3ad6d8c8f2.png
-blueprint/plugins/rtl/readme.txt: blueprint/plugins/rtl/readme-31ae4365e62f271c051768772ef80983.txt
-blueprint/plugins/link-icons/icons/feed.png: blueprint/plugins/link-icons/icons/feed-8a69d1caefbf5db15a1d10ff3fb230a1.png
-blueprint/plugins/fancy-type/readme.txt: blueprint/plugins/fancy-type/readme-cf1dfc58c313fbea681fe2a1b629c0fe.txt
-blueprint/plugins/buttons/icons/cross.png: blueprint/plugins/buttons/icons/cross-1f87fac86c438386527b5e7d5ceecb0e.png
-blueprint/plugins/link-icons/icons/email.png: blueprint/plugins/link-icons/icons/email-5cd503b361f048d039700499dd79e9a9.png
-blueprint/plugins/link-icons/readme.txt: blueprint/plugins/link-icons/readme-c05f7b4f893137768f58ec83f0e738b9.txt
-blueprint/plugins/link-icons/icons/lock.png: blueprint/plugins/link-icons/icons/lock-633641f19c406146563137231f483f3e.png
-blueprint/plugins/link-icons/icons/im.png: blueprint/plugins/link-icons/icons/im-7a7381ccc94de610b02fdec360ae02d9.png
-blueprint/plugins/link-icons/icons/external.png: blueprint/plugins/link-icons/icons/external-3434ddfe7e6b7114e14a73bf27b39a28.png
-rails.png: rails-e4b51606cd77fda2615e7439907bfc92.png
-blueprint/plugins/link-icons/icons/pdf.png: blueprint/plugins/link-icons/icons/pdf-ae64a014d52eab7f35cf36b4c0c29014.png
-application.css: application-cd728f3a08415c27ca2e753d30091c74.css
-blueprint/plugins/link-icons/icons/xls.png: blueprint/plugins/link-icons/icons/xls-4f6ec43c6cfd67d759ccc123fd44e1c6.png
-blueprint/plugins/buttons/readme.txt: blueprint/plugins/buttons/readme-44a658764edd61d31c7f1d2b84edc07e.txt
-application.js: application-28647733cd84612bf5e3fa1139aa7f16.js
-blueprint/plugins/link-icons/icons/visited.png: blueprint/plugins/link-icons/icons/visited-cea77dc24a977b4cb2728225f6852eb8.png
-blueprint/plugins/buttons/icons/tick.png: blueprint/plugins/buttons/icons/tick-09de3f730b3b6ef960450a506b0916a9.png
+jquery.min.js: jquery-5fe7dffea4c474fbf2296b5d199b1644.min.js
+blueprint/src/grid.png: blueprint/src/grid-973add038ed86febca85f03e8b35b94a.png
+blueprint/plugins/buttons/icons/key.png: blueprint/plugins/buttons/icons/key-55237526967cbcab3e8cfb12f0029d88.png
+tuneboatlogo.png: tuneboatlogo-f47ae6b816e40bacc5bc40013f760508.png
+blueprint/plugins/link-icons/icons/doc.png: blueprint/plugins/link-icons/icons/doc-b071fd74b88ff38cda8360a53f493013.png
+blueprint/plugins/rtl/readme.txt: blueprint/plugins/rtl/readme-8d11bf76e19fb3fc7dbc6c2ddb54b92d.txt
+blueprint/plugins/link-icons/icons/feed.png: blueprint/plugins/link-icons/icons/feed-59bc8604661681639d25cb7015a32c38.png
+blueprint/plugins/fancy-type/readme.txt: blueprint/plugins/fancy-type/readme-e7ed185d1a9f23256d418ab929b464d9.txt
+blueprint/plugins/buttons/icons/cross.png: blueprint/plugins/buttons/icons/cross-2ebcd25368006d1b7b0c5b7d6b523ab3.png
+jquery-ui.min.js: jquery-ui-280efe133a342dbb00dbbe940da889ac.min.js
+blueprint/plugins/link-icons/icons/email.png: blueprint/plugins/link-icons/icons/email-28104e72b3418737d4b9b329c12ec358.png
+blueprint/plugins/link-icons/readme.txt: blueprint/plugins/link-icons/readme-42c02030199cd36a671d4b623cb4dc36.txt
+blueprint/plugins/link-icons/icons/lock.png: blueprint/plugins/link-icons/icons/lock-d73c4b3b57ce72cb6dbd8b265507ff75.png
+blueprint/plugins/link-icons/icons/im.png: blueprint/plugins/link-icons/icons/im-afeeb6e0b652c1edb1441bf0fb428596.png
+blueprint/plugins/link-icons/icons/external.png: blueprint/plugins/link-icons/icons/external-ee6d976ddb80125fafe1a33c6f8aed10.png
+rails.png: rails-bd9ad5a560b5a3a7be0808c5cd76a798.png
+application.css: application-f328b43dbdea0629a80d46260e8d22c4.css
+blueprint/plugins/link-icons/icons/pdf.png: blueprint/plugins/link-icons/icons/pdf-c4c543e5103a8516839a7846b91e1ac4.png
+blueprint/plugins/link-icons/icons/xls.png: blueprint/plugins/link-icons/icons/xls-5399729cd31dffc492a04b3805cd0be1.png
+application.js: application-e87fab78974b42d335bbe5ca0dc60727.js
+blueprint/plugins/buttons/readme.txt: blueprint/plugins/buttons/readme-3ff7f5dbb0288d71f70682fdbe9d86ec.txt
+blueprint/plugins/link-icons/icons/visited.png: blueprint/plugins/link-icons/icons/visited-fb2370448bc4ea5d079e963a8c0d900b.png
+blueprint/plugins/buttons/icons/tick.png: blueprint/plugins/buttons/icons/tick-3f5fc1f52b505b93f88263e0432d25ce.png
